# switchelo

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: daemon.rs  main.rs
src/inputs/: cli.rs  http.rs  mod.rs  wire.rs
